header nav style completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 body {
     font-family: 'Open Sans Condensed', sans-serif;
+    padding: 20px 60px; /* 20px on top and bottom and 80px on the side */
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
