--- a/src/components/sign-in/sign-in-style.scss
+++ b/src/components/sign-in/sign-in-style.scss
@@ -3,4 +3,8 @@
     display: flex;
     flex-direction: column;
 
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
 };
